--- a/app/src/sass/components/Landing.scss
+++ b/app/src/sass/components/Landing.scss
@@ -7,6 +7,7 @@
   height: 600px;
   width: 100%;
   max-width: $App_max_width;
+  min-width: $App_min_width;
   margin: auto;
   position: relative;
   margin-top: $Landing_padding_top;
