--- a/app/src/css/components/Dashboard.css
+++ b/app/src/css/components/Dashboard.css
@@ -20,6 +20,7 @@
   background-color: #D7D7D7;
   height: 100%;
   width: calc(100% - (2 * 0.7em));
+  min-width: calc(600px - (2 * 0.7em));
   padding: 0.7em;
   position: relative;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
@@ -39,6 +40,7 @@
     width: 100%;
     height: 100%;
     max-width: calc(1600px - (2 * 0.7em));
+    min-width: calc(600px - (2 * 0.7em));
     margin: 0.7em;
     margin: auto;
     position: relative; }
