--- a/app/src/css/components/Order.css
+++ b/app/src/css/components/Order.css
@@ -56,6 +56,8 @@
       font-weight: bold;
       font-size: 20px;
       right: 0; }
+      .Order .content .oStatus .oId {
+        font-size: 19px; }
   .Order .status-message {
     position: absolute;
     top: 0.4em;
@@ -142,7 +144,8 @@
                     float: right;
                     margin-right: 1em;
                     display: block;
-                    width: 44%; }
+                    width: 44%;
+                    min-width: 176px; }
                 .Order .status-message.controls-wrapper.accept-controls .ShippingAddressForm .form-wrapper form div .Input {
                   *zoom: 1; }
                 .Order .status-message.controls-wrapper.accept-controls .ShippingAddressForm .form-wrapper form div .Input:before, .Order .status-message.controls-wrapper.accept-controls .ShippingAddressForm .form-wrapper form div .Input:after {
@@ -154,7 +157,9 @@
                   float: left;
                   margin-left: 0.5em;
                   border: none;
+                  border-radius: 4px;
                   width: 50%;
+                  min-width: 200px;
                   height: 100%;
                   font-size: 16px; }
             .Order .status-message.controls-wrapper.accept-controls .ShippingAddressForm .form-wrapper button {
@@ -252,7 +257,8 @@
                   float: right;
                   margin-right: 1em;
                   display: block;
-                  width: 44%; }
+                  width: 44%;
+                  min-width: 176px; }
               .Order .status-message.controls-wrapper.shipping-controls .form-wrapper form div .Input {
                 *zoom: 1; }
               .Order .status-message.controls-wrapper.shipping-controls .form-wrapper form div .Input:before, .Order .status-message.controls-wrapper.shipping-controls .form-wrapper form div .Input:after {
@@ -264,7 +270,9 @@
                 float: left;
                 margin-left: 0.5em;
                 border: none;
+                border-radius: 4px;
                 width: 50%;
+                min-width: 200px;
                 height: 100%;
                 font-size: 16px; }
           .Order .status-message.controls-wrapper.shipping-controls .form-wrapper button {
