--- a/app/src/sass/components/Dashboard.scss
+++ b/app/src/sass/components/Dashboard.scss
@@ -6,6 +6,7 @@
   background-color: $Dashboard_bg_color;
   height: 100%;
   width: calc(100% - (2 * #{$Dashboard_padding}));
+  min-width: calc(#{$App_min_width} - (2 * #{$Dashboard_padding}));
   @include micro-clearfix();
   padding: $Dashboard_padding;
   position: relative;
@@ -19,6 +20,7 @@
     width: 100%;
     height: 100%;
     max-width: calc(#{$App_max_width} - (2 * #{$Dashboard_padding}));
+    min-width: calc(#{$App_min_width} - (2 * #{$Dashboard_padding}));
     margin: $Dashboard_padding;
     margin: auto;
     position: relative;
