--- a/app/src/sass/components/Order.scss
+++ b/app/src/sass/components/Order.scss
@@ -32,6 +32,9 @@
       font-weight: bold;
       font-size: 20px;
       right: 0;
+      .oId {
+        font-size: 19px;
+      }
     }
   }
   .status-message {
@@ -122,6 +125,7 @@
                     margin-right: 1em;
                     display: block;
                     width: 44%;
+                    min-width: 176px;
                   }
                 }
                 .Input {
@@ -130,7 +134,9 @@
                     float: left;
                     margin-left: 0.5em;
                     border: none;
+                    border-radius: 4px;
                     width: 50%;
+                    min-width: 200px;
                     height: 100%;
                     font-size: 16px;
                   }
@@ -238,6 +244,7 @@
                   margin-right: 1em;
                   display: block;
                   width: 44%;
+                  min-width: 176px;
                 }
               }
               .Input {
@@ -246,7 +253,9 @@
                   float: left;
                   margin-left: 0.5em;
                   border: none;
+                  border-radius: 4px;
                   width: 50%;
+                  min-width: 200px;
                   height: 100%;
                   font-size: 16px;
                 }
