--- a/app/src/sass/components/QuoteForm.scss
+++ b/app/src/sass/components/QuoteForm.scss
@@ -1,16 +1,19 @@
 @import '../partials/variables';
+@import '../mixins/button';
 
 .QuoteForm {
   background-color: $QuoteForm_bg_color;
   max-width: $OrderList_max_width;
   margin: auto;
   .content-wrapper {
+    position: relative;
     background-color: $QuoteForm_bg_color;
     box-shadow: 0px 1px 2px rgba(0,0,0,.16);
     border-radius: $OrderSubList_border_radius;
     width: 96%;
     margin: 0.5em auto;
     // margin-top: 1.5em;
+    padding-bottom: 3em;
     >form, >button {
       margin: 1rem;
     }
@@ -31,6 +34,38 @@
         padding-bottom: 0.15em;
         border-bottom: solid 1px $OrderSubList_header_color;
         text-transform: uppercase;
+      }
+    }
+    .submit, .reset {
+      @include button();
+      height: 3.5em;
+      font-size: 14px;
+      width: 10em;
+      span {
+        display: block;
+        width: 100%;
+      }
+    }
+    .submit {
+      position: absolute;
+      bottom: 0.4em;
+      right: calc(50% - 10.5em);
+      background-color: $success_green;
+      border-color: $c1;
+      &:hover {
+        border-color: $c1;
+        background-color: $success_green_highlight;
+      }
+    }
+    .reset {
+      position: absolute;
+      bottom: 0.4em;
+      left: calc(50% - 10.5em);
+      background-color: $primary_blue;
+      border-color: $c1;
+      &:hover {
+        background-color: $primary_blue_highlight;
+        border-color: $c1;
       }
     }
   }
