--- a/app/src/sass/partials/_variables.scss
+++ b/app/src/sass/partials/_variables.scss
@@ -57,6 +57,7 @@ $medium_screen_width: 768px;
 
 /* Container measurements */
 $App_max_width: 1600px;
+$App_min_width: 600px;
 $Dashboard_padding: 0.7em;
 $Dashboard_header_width: 70%;
 $Landing_padding_top: 4.5em;
