--- a/app/src/sass/components/Order.scss
+++ b/app/src/sass/components/Order.scss
@@ -139,6 +139,7 @@
                     min-width: 200px;
                     height: 100%;
                     font-size: 16px;
+                    padding-left: 0.8em;
                   }
                 }
               }
@@ -258,6 +259,7 @@
                   min-width: 200px;
                   height: 100%;
                   font-size: 16px;
+                  padding-left: 0.8em;
                 }
               }
             }
