--- a/app/src/sass/components/Dashboard.scss
+++ b/app/src/sass/components/Dashboard.scss
@@ -58,6 +58,7 @@
     margin-right: 0.2em;
   }
   &.refresh {
+    margin-top: 0;
     background-image: url('../../img/refresh.png');
     background-size: contain;
     background-repeat: no-repeat;
@@ -65,6 +66,7 @@
     width: calc(26% - (#{$button_border_size}*2) - 0.7em);
   }
   &.settings {
+    margin-top: 0;
     background-image: url('../../img/settings.png');
     background-size: contain;
     background-repeat: no-repeat;
