--- a/app/src/sass/components/SignIn.scss
+++ b/app/src/sass/components/SignIn.scss
@@ -65,7 +65,8 @@
       width: 10em;
       left: 50%;
       margin-left: -5em;
-      margin-top: 4em;
+      margin-top: 3em;
+      font-size: 18px;
       span {
         display: block;
         width: 100%;
@@ -80,6 +81,6 @@
   }
   .forgot {
     display: block;
-    margin-top: 11em;
+    margin-top: 11.4em;
   }
 }
