Fix width of forgot link in SignIn.js

--- a/app/src/css/components/SignIn.css
+++ b/app/src/css/components/SignIn.css
@@ -110,6 +110,8 @@
       background-color: #1DBF6E; }
   .SignIn .forgot {
     display: block;
+    width: 12em;
+    margin: auto;
     margin-top: 11.4em; }
 
 /*# sourceMappingURL=SignIn.css.map */
