--- a/src/sass/components/Landing.scss
+++ b/src/sass/components/Landing.scss
@@ -19,10 +19,28 @@
   }
 }
 
-// .quote-stock-form-wrapper {
-//   border: solid 3px blue;
-//   position: absolute
-// }
+.quote-stock-form-wrapper {
+  .show-other-button-wrapper {
+    width: 96%;
+    margin: auto;
+    margin-top: 1em;
+    button {
+      border: none;
+      cursor: pointer;
+      color: $primary_blue;
+      background-color: transparent;
+      text-decoration: underline;
+      font-size: 15px;
+      font-weight: 600;
+      &:hover {
+        color: $primary_blue_highlight;
+        border: none;
+      }
+      // $primary_blue: #72C3F1;
+      // $primary_blue_highlight: #2AAAF3;
+    }
+  }
+}
 
 @media screen and (min-width: 1150px) {
   .quote-stock-form-wrapper {
@@ -32,6 +50,17 @@
     float: left;
     width: 50%;
     height: 100%;
+    .show-other-button-wrapper {
+      width: 94%;
+    }
+    .QuoteForm, .StockOrderForm {
+      .content-wrapper {
+        width: 94%;
+        .header {
+          font-size: 1.6em;
+        }
+      }
+    }
   }
 }
 
