--- a/src/css/components/StockOrderForm.css
+++ b/src/css/components/StockOrderForm.css
@@ -47,5 +47,45 @@
         padding-bottom: 0.15em;
         border-bottom: solid 1px #000000;
         text-transform: uppercase; }
+    .StockOrderForm .content-wrapper .submit, .StockOrderForm .content-wrapper .reset {
+      height: 3.5em;
+      font-size: 14px;
+      width: 10em; }
+      .StockOrderForm .content-wrapper .submit, .StockOrderForm .content-wrapper .reset {
+        background-color: #9A9A9A;
+        border: solid 1px;
+        border-color: #1F1F1F;
+        border-radius: 4px;
+        cursor: pointer;
+        display: table;
+        text-align: center; }
+        .StockOrderForm .content-wrapper .submit span, .StockOrderForm .content-wrapper .reset span {
+          display: table-cell;
+          vertical-align: middle;
+          text-align: center; }
+        .StockOrderForm .content-wrapper .submit:hover, .StockOrderForm .content-wrapper .reset:hover {
+          background-color: #7B7B7B;
+          border-color: #3D3D3D; }
+      .StockOrderForm .content-wrapper .submit span, .StockOrderForm .content-wrapper .reset span {
+        display: block;
+        width: 100%; }
+    .StockOrderForm .content-wrapper .submit {
+      position: absolute;
+      bottom: 0.4em;
+      right: calc(50% - 10.5em);
+      background-color: #5BDA9B;
+      border-color: #F6F6F6; }
+      .StockOrderForm .content-wrapper .submit:hover {
+        border-color: #F6F6F6;
+        background-color: #1DBF6E; }
+    .StockOrderForm .content-wrapper .reset {
+      position: absolute;
+      bottom: 0.4em;
+      left: calc(50% - 10.5em);
+      background-color: #72C3F1;
+      border-color: #F6F6F6; }
+      .StockOrderForm .content-wrapper .reset:hover {
+        background-color: #2AAAF3;
+        border-color: #F6F6F6; }
 
 /*# sourceMappingURL=StockOrderForm.css.map */
