--- a/src/css/components/StockOrderForm.css
+++ b/src/css/components/StockOrderForm.css
@@ -87,5 +87,54 @@
       .StockOrderForm .content-wrapper .reset:hover {
         background-color: #2AAAF3;
         border-color: #F6F6F6; }
+  .StockOrderForm .MachineNumberBlock {
+    border: solid 1px #D7D7D7;
+    border-radius: 4px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.16);
+    position: relative;
+    display: block;
+    min-height: 3.4em; }
+    .StockOrderForm .MachineNumberBlock:not(:first-child) {
+      margin-top: 0.6em; }
+    .StockOrderForm .MachineNumberBlock .machine-wrapper {
+      margin-top: 0.4em;
+      display: none; }
+      .StockOrderForm .MachineNumberBlock .machine-wrapper {
+        *zoom: 1; }
+      .StockOrderForm .MachineNumberBlock .machine-wrapper:before, .StockOrderForm .MachineNumberBlock .machine-wrapper:after {
+        content: "";
+        display: table; }
+      .StockOrderForm .MachineNumberBlock .machine-wrapper:after {
+        clear: both; }
+    .StockOrderForm .MachineNumberBlock .add-machine-number-btn {
+      display: none; }
+    .StockOrderForm .MachineNumberBlock .PartNumberBlock {
+      position: relative;
+      display: block; }
+      .StockOrderForm .MachineNumberBlock .PartNumberBlock .part-wrapper {
+        border: none;
+        border-radius: 0;
+        margin-left: 0.8em; }
+      .StockOrderForm .MachineNumberBlock .PartNumberBlock .add-part-number-btn {
+        position: absolute;
+        top: 0.95em;
+        left: 1.25em;
+        width: 2.25em;
+        height: 2.25em; }
+        .StockOrderForm .MachineNumberBlock .PartNumberBlock .add-part-number-btn {
+          background-color: #9A9A9A;
+          border: solid 1px;
+          border-color: #1F1F1F;
+          border-radius: 4px;
+          cursor: pointer;
+          display: table;
+          text-align: center; }
+          .StockOrderForm .MachineNumberBlock .PartNumberBlock .add-part-number-btn span {
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center; }
+          .StockOrderForm .MachineNumberBlock .PartNumberBlock .add-part-number-btn:hover {
+            background-color: #7B7B7B;
+            border-color: #3D3D3D; }
 
 /*# sourceMappingURL=StockOrderForm.css.map */
