--- a/src/css/components/OrderPart.css
+++ b/src/css/components/OrderPart.css
@@ -31,9 +31,13 @@
         width: calc(11% - 3px);
         font-size: 1em; }
       .OrderParts-wrapper .OrderParts-titles div.machine_serial_num {
-        width: calc(28% - 3px); }
+        width: calc(22% - 3px); }
       .OrderParts-wrapper .OrderParts-titles div.quantity {
         width: calc(15% - 3px); }
+      .OrderParts-wrapper .OrderParts-titles div.price-unit {
+        width: calc(11.5% - 3px); }
+      .OrderParts-wrapper .OrderParts-titles div.price-total {
+        width: calc(17.5% - 3px); }
       .OrderParts-wrapper .OrderParts-titles div:not(:last-child) {
         border-right: solid 1px black; }
   .OrderParts-wrapper .OrderParts-final {
@@ -44,87 +48,92 @@
       display: inline-block;
       text-align: center; }
     .OrderParts-wrapper .OrderParts-final .spacer {
-      width: calc(19.25% - 3px);
-      border-right: solid 1px black; }
-    .OrderParts-wrapper .OrderParts-final #spacer4 {
+      width: calc(16.5% - 2px); }
+    .OrderParts-wrapper .OrderParts-final #spacer5 {
       border-right: 0; }
     .OrderParts-wrapper .OrderParts-final .price {
-      width: calc(23% - 3px);
-      border-left: solid 1px black; }
+      width: calc(17.5% - 3px);
+      font-size: 13px; }
 
 .OrderPart {
   outline: solid 1px transparent;
   line-height: 1.4em;
   height: calc(auto + 100px); }
-  .OrderPart .content-wrapper .details {
-    display: inline-block;
-    width: 100%; }
-    .OrderPart .content-wrapper .details div {
+  .OrderPart .content-wrapper {
+    font-size: 13px; }
+    .OrderPart .content-wrapper .details {
       display: inline-block;
-      width: calc(23% - 3px);
-      text-align: center;
-      border-bottom: solid 1px #B9B9B9; }
-      .OrderPart .content-wrapper .details div.shipped {
-        width: calc(11% - 3px); }
-        .OrderPart .content-wrapper .details div.shipped a {
-          display: block;
-          width: 100%;
-          cursor: pointer; }
-        .OrderPart .content-wrapper .details div.shipped .done {
-          color: transparent;
-          background-image: url("../../img/done.png");
-          background-size: contain;
-          background-repeat: no-repeat;
-          background-position: center;
-          height: 100%;
-          min-width: 14px;
-          border-bottom: none; }
-      .OrderPart .content-wrapper .details div.machine_serial_num {
-        width: calc(28% - 3px); }
-      .OrderPart .content-wrapper .details div.quantity {
-        width: calc(15% - 3px); }
-      .OrderPart .content-wrapper .details div.price {
-        position: relative; }
-        .OrderPart .content-wrapper .details div.price .status {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          border: none; }
-          .OrderPart .content-wrapper .details div.price .status div {
-            border: none; }
-          .OrderPart .content-wrapper .details div.price .status button {
-            margin: 0.1em 0;
-            float: right;
-            margin-right: 0.5em; }
-        .OrderPart .content-wrapper .details div.price .AddPriceForm {
-          position: absolute;
-          display: inline-block;
-          top: 1.4em;
-          left: 0;
-          width: 100%;
-          height: 4em;
-          z-index: 100; }
-          .OrderPart .content-wrapper .details div.price .AddPriceForm .input-button-wrapper {
-            position: relative;
-            background-color: #D7D7D7;
+      width: 100%; }
+      .OrderPart .content-wrapper .details div {
+        display: inline-block;
+        width: calc(23% - 3px);
+        text-align: center;
+        border-bottom: solid 1px #B9B9B9; }
+        .OrderPart .content-wrapper .details div.shipped {
+          width: calc(11% - 3px); }
+          .OrderPart .content-wrapper .details div.shipped a {
+            display: block;
+            width: 100%;
+            cursor: pointer; }
+          .OrderPart .content-wrapper .details div.shipped .done {
+            color: transparent;
+            background-image: url("../../img/done.png");
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 100%;
+            min-width: 14px;
+            border-bottom: none; }
+        .OrderPart .content-wrapper .details div.machine_serial_num {
+          width: calc(22% - 3px); }
+        .OrderPart .content-wrapper .details div.quantity {
+          width: calc(15% - 3px); }
+        .OrderPart .content-wrapper .details div.price-unit {
+          position: relative;
+          width: calc(11.5% - 3px); }
+        .OrderPart .content-wrapper .details div.price-total {
+          position: relative;
+          width: calc(17.5% - 3px); }
+          .OrderPart .content-wrapper .details div.price-total .status {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             border: none; }
-            .OrderPart .content-wrapper .details div.price .AddPriceForm .input-button-wrapper button {
-              position: absolute;
-              bottom: 0.2em;
-              right: 0.4em; }
-            .OrderPart .content-wrapper .details div.price .AddPriceForm .input-button-wrapper .Input {
-              border: none;
-              display: block;
-              position: absolute;
-              top: 0.4em;
-              left: 0;
-              right: 0;
-              width: 100%; }
-      .OrderPart .content-wrapper .details div:not(:last-child) {
-        border-right: solid 1px black; }
+            .OrderPart .content-wrapper .details div.price-total .status div {
+              border: none; }
+            .OrderPart .content-wrapper .details div.price-total .status button {
+              margin: 0.1em 0;
+              float: right;
+              margin-right: 0.5em; }
+          .OrderPart .content-wrapper .details div.price-total .AddPriceForm {
+            position: absolute;
+            display: inline-block;
+            top: 1.4em;
+            left: 0;
+            width: 100%;
+            height: 4em;
+            z-index: 100; }
+            .OrderPart .content-wrapper .details div.price-total .AddPriceForm .input-button-wrapper {
+              position: relative;
+              background-color: #D7D7D7;
+              width: 100%;
+              height: 100%;
+              border: none; }
+              .OrderPart .content-wrapper .details div.price-total .AddPriceForm .input-button-wrapper button {
+                position: absolute;
+                bottom: 0.2em;
+                right: 0.4em; }
+              .OrderPart .content-wrapper .details div.price-total .AddPriceForm .input-button-wrapper .Input {
+                border: none;
+                display: block;
+                position: absolute;
+                top: 0.4em;
+                left: 0;
+                right: 0;
+                width: 100%; }
+        .OrderPart .content-wrapper .details div:not(:last-child) {
+          border-right: solid 1px black; }
 
 /*# sourceMappingURL=OrderPart.css.map */
