--- a/src/sass/components/App.scss
+++ b/src/sass/components/App.scss
@@ -6,7 +6,8 @@ html, body {
   padding: 0;
   width: 100%;
   height: calc(100% - #{$Landing_padding_top});
-  font-family: $raleway;
+  // font-family: $raleway;
+  font-family: $titillium;
 }
 
 h1, h2, h3, h4, h5, h6 {
