--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -78,3 +78,5 @@ $ShippingDetail_border_radius: 4px;
 ***/
 $main_font_family: sans-serif;
 $raleway: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$titillium: "Titillium Web", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
+sans-serif;
