--- a/src/css/components/App.css
+++ b/src/css/components/App.css
@@ -22,7 +22,7 @@ html, body {
   padding: 0;
   width: 100%;
   height: calc(100% - 4.5em);
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font-family: "Titillium Web", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
