--- a/src/sass/components/OrderPart.scss
+++ b/src/sass/components/OrderPart.scss
@@ -35,7 +35,7 @@
     }
   }
   .OrderParts-final {
-    font-size: 13px;
+    font-size: 14px;
     width: 100%;
     display: inline-block;
     div {
@@ -68,8 +68,8 @@
   .OrderParts-discount {
     width: 100%;
     display: inline-block;
+    font-size: 14px;
     div {
-      font-size: 13px;
       display: inline-block;
       text-align: center;
       padding-bottom: 0.25em;
@@ -82,7 +82,7 @@
         // border-bottom: solid 1px black;
         text-align: right;
         background-color: $success_green;
-        width: calc(11.75% - 2px);
+        width: calc(11.5% - 2px);
         // border-top-left-radius: 4px;
         // border-bottom-left-radius: 4px;
       }
@@ -90,20 +90,21 @@
     .discount {
       background-color: $success_green;
       // border-bottom: solid 1px black;
-      width: calc(17.5% - 3px);
+      width: calc(17.5% - 2px);
       // border-top-right-radius: 4px;
       // border-bottom-right-radius: 4px;
     }
   }
   .OrderParts-total {
     padding-bottom: 1em;
-    font-size: 13px;
+    font-size: 14px;
     width: 100%;
     display: inline-block;
     div {
       display: inline-block;
       text-align: center;
-      padding-bottom: 0.2em;
+      padding-bottom: 0.25em;
+      padding-top: 0.25em;
       margin-bottom: 0;
     }
     .spacer {
@@ -112,7 +113,7 @@
         // border-bottom: solid 1px black;
         text-align: right;
         background-color: $c3;
-        width: calc(11.75% - 2px);
+        width: calc(11.5% - 2px);
         // border-top-left-radius: 4px;
         // border-bottom-left-radius: 4px;
       }
@@ -120,7 +121,7 @@
     .final {
       background-color: $c3;
       // border-bottom: solid 1px black;
-      width: calc(17.5% - 3px);
+      width: calc(17.5% - 2px);
       // border-top-right-radius: 4px;
       // border-bottom-right-radius: 4px;
     }
