--- a/src/css/components/Dashboard.css
+++ b/src/css/components/Dashboard.css
@@ -50,6 +50,12 @@
   width: 70%;
   height: 100%;
   margin-left: 0.425em; }
+  .Dashboard-header a {
+    text-decoration: none;
+    color: black; }
+    .Dashboard-header a:hover {
+      text-decoration: none;
+      color: black; }
 
 .button-container {
   display: inline-block;
