--- a/src/sass/components/Dashboard.scss
+++ b/src/sass/components/Dashboard.scss
@@ -32,6 +32,14 @@
   width: $Dashboard_header_width;
   height: 100%;
   margin-left: 0.425em;
+  a {
+    text-decoration: none;
+    color: black;
+    &:hover {
+      text-decoration: none;
+      color: black;
+    }
+  }
 }
 
 .button-container {
