Add fonts and minor bug fix for orderSubList sorting in admin view

--- a/src/sass/components/App.scss
+++ b/src/sass/components/App.scss
@@ -7,7 +7,7 @@ html, body {
   width: 100%;
   height: calc(100% - #{$Landing_padding_top});
   // font-family: $raleway;
-  font-family: $titillium;
+  font-family: $main_font;
 }
 
 h1, h2, h3, h4, h5, h6 {
