--- a/src/css/components/App.css
+++ b/src/css/components/App.css
@@ -16,13 +16,73 @@
 /***
   FONTS
 ***/
+@font-face {
+  font-family: 'Roboto';
+  font-style: bold;
+  font-weight: 900;
+  src: local("Roboto-Black"), url(../../fonts/Roboto-Black.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 900;
+  src: local("Roboto-BlackItalic"), url(../../fonts/Roboto-BlackItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: bold;
+  font-weight: 800;
+  src: local("Roboto-Bold"), url(../../fonts/Roboto-Bold.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 800;
+  src: local("Roboto-BoldItalic"), url(../../fonts/Roboto-BoldItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  src: local("Roboto-Italic"), url(../../fonts/Roboto-Italic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Roboto-Light"), url(../../fonts/Roboto-Light.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 300;
+  src: local("Roboto-LightItalic"), url(../../fonts/Roboto-LightItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: medium;
+  font-weight: 500;
+  src: local("Roboto-Medium"), url(../../fonts/Roboto-Medium.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 500;
+  src: local("Roboto-MediumItalic"), url(../../fonts/Roboto-MediumItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto-Regular"), url(../../fonts/Roboto-Regular.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: thin;
+  font-weight: 200;
+  src: local("Roboto-Thin"), url(../../fonts/Roboto-Thin.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 200;
+  src: local("Roboto-ThinItalic"), url(../../fonts/Roboto-ThinItalic.ttf); }
 html, body {
   background-color: #F6F6F6;
   margin: 0;
   padding: 0;
   width: 100%;
   height: calc(100% - 4.5em);
-  font-family: "Titillium Web", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font-family: "Roboto", sans-serif; }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
