--- a/src/css/components/OrderPart.css
+++ b/src/css/components/OrderPart.css
@@ -16,6 +16,66 @@
 /***
   FONTS
 ***/
+@font-face {
+  font-family: 'Roboto';
+  font-style: bold;
+  font-weight: 900;
+  src: local("Roboto-Black"), url(../../fonts/Roboto-Black.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 900;
+  src: local("Roboto-BlackItalic"), url(../../fonts/Roboto-BlackItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: bold;
+  font-weight: 800;
+  src: local("Roboto-Bold"), url(../../fonts/Roboto-Bold.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 800;
+  src: local("Roboto-BoldItalic"), url(../../fonts/Roboto-BoldItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  src: local("Roboto-Italic"), url(../../fonts/Roboto-Italic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Roboto-Light"), url(../../fonts/Roboto-Light.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 300;
+  src: local("Roboto-LightItalic"), url(../../fonts/Roboto-LightItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: medium;
+  font-weight: 500;
+  src: local("Roboto-Medium"), url(../../fonts/Roboto-Medium.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 500;
+  src: local("Roboto-MediumItalic"), url(../../fonts/Roboto-MediumItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto-Regular"), url(../../fonts/Roboto-Regular.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: thin;
+  font-weight: 200;
+  src: local("Roboto-Thin"), url(../../fonts/Roboto-Thin.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 200;
+  src: local("Roboto-ThinItalic"), url(../../fonts/Roboto-ThinItalic.ttf); }
 .OrderParts-wrapper {
   border: solid 1px transparent; }
   .OrderParts-wrapper .OrderParts-titles {
