--- a/src/sass/components/Order.scss
+++ b/src/sass/components/Order.scss
@@ -328,6 +328,44 @@
   }
 }
 
+.add-anoter-part-form {
+  align-items: center;
+  outline: solid 1px red;
+  position: relative;
+  display: flex;
+  // height: 10rem;
+  .quote-stock-form-wrapper {
+    .h3-wrapper {
+      outline: solid 1px red;
+      display: flex;
+      width: 100%;
+      margin-top: 0.6rem;
+    }
+    outline: solid 1px blue;
+    display: block;
+    position: static;
+    width: 70%;
+    .header {
+      outline: solid 1px red;
+      // display: none;
+      color: transparent;
+      height: 0;
+      background-color: transparent;
+      span {
+        border: none;
+        height: 0;
+      }
+    }
+    .span-wrapper {
+      outline: solid 1px red;
+      // width: 40px;
+      span {
+        color: black;
+      }
+    }
+  }
+}
+
 .OrderPart-wrapper-transition-enter {
   transition: all 350ms ease-in-out;
   max-height: 0;
